// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays error if invalid & touched 1`] = `
.c2 {
  font-size: 0.775rem;
  color: #ea232d;
}

.c1 {
  border: 1px solid #ea232d;
  background: no-repeat 97% url(test-file-stub);
  background-color: #ffe7ec;
  display: block;
  background-size: 15px 15px;
  width: auto;
  padding: 10px;
}

.c0 {
  margin-bottom: 20px;
}

<div
  className="c0"
>
  <input
    className="c1"
    name="foo"
    placeholder={null}
  />
  <p
    className="c2"
  >
    Field is required
  </p>
</div>
`;

exports[`displays neutral state if not touched: no error 1`] = `
.c2 {
  font-size: 0.775rem;
  color: #ea232d;
}

.c1 {
  border: 1px solid #d9d9d9;
  background-color: white;
  display: block;
  background-size: 15px 15px;
  width: auto;
  padding: 10px;
}

.c0 {
  margin-bottom: 20px;
}

<div
  className="c0"
>
  <input
    className="c1"
    name="foo"
    placeholder={null}
  />
  <p
    className="c2"
  />
</div>
`;

exports[`displays neutral state if not touched: with error 1`] = `
.c2 {
  font-size: 0.775rem;
  color: #ea232d;
}

.c1 {
  border: 1px solid #d9d9d9;
  background-color: white;
  display: block;
  background-size: 15px 15px;
  width: auto;
  padding: 10px;
}

.c0 {
  margin-bottom: 20px;
}

<div
  className="c0"
>
  <input
    className="c1"
    name="foo"
    placeholder={null}
  />
  <p
    className="c2"
  >
    some error
  </p>
</div>
`;

exports[`displays success if valid & touched 1`] = `
.c2 {
  font-size: 0.775rem;
  color: #ea232d;
}

.c1 {
  border: 1px solid #62b33c;
  background: no-repeat 97% url(test-file-stub);
  background-color: #e6f8e7;
  display: block;
  background-size: 15px 15px;
  width: auto;
  padding: 10px;
}

.c0 {
  margin-bottom: 20px;
}

<div
  className="c0"
>
  <input
    className="c1"
    name="foo"
    placeholder={null}
  />
  <p
    className="c2"
  />
</div>
`;
